@@ -1,3 +1,9 @@
+2002-09-10  Marcus Brinkmann  <marcus@gnu.org>
+
+	* hurdio.c (hurdio_writer_loop): Desert the DTR on all errors, not
+	only EIO.
+	(hurdio_reader_loop): Likewise.
+
 2002-08-18  Roland McGrath  <roland@frob.com>
 
 	* main.c (main): Open with O_RDWR only for hurdio bottomhalf.
